Rename sorted lists to sets

--- a/mss32/mss32.vcxproj
+++ b/mss32/mss32.vcxproj
@@ -362,9 +362,9 @@ call ..\buildDetours.bat ..\Detours
     <ClCompile Include="src\sitemerchantinterf.cpp" />
     <ClCompile Include="src\smartptr.cpp" />
     <ClCompile Include="src\movepathhooks.cpp" />
-    <ClCompile Include="src\sortedcapitalracelist.cpp" />
-    <ClCompile Include="src\sortedpointlist.cpp" />
-    <ClCompile Include="src\sortedracelist.cpp" />
+    <ClCompile Include="src\capitalraceset.cpp" />
+    <ClCompile Include="src\pointset.cpp" />
+    <ClCompile Include="src\raceset.cpp" />
     <ClCompile Include="src\stackbattleactionmsg.cpp" />
     <ClCompile Include="src\stringandid.cpp" />
     <ClCompile Include="src\stringarray.cpp" />
@@ -805,11 +805,11 @@ call ..\buildDetours.bat ..\Detours
     <ClInclude Include="include\sitecategories.h" />
     <ClInclude Include="include\sitemerchantinterf.h" />
     <ClInclude Include="include\smartptr.h" />
-    <ClInclude Include="include\sortedcapitalracelist.h" />
+    <ClInclude Include="include\capitalraceset.h" />
     <ClInclude Include="include\d2set.h" />
     <ClInclude Include="include\movepathhooks.h" />
-    <ClInclude Include="include\sortedpointlist.h" />
-    <ClInclude Include="include\sortedracelist.h" />
+    <ClInclude Include="include\pointset.h" />
+    <ClInclude Include="include\raceset.h" />
     <ClInclude Include="include\spellcat.h" />
     <ClInclude Include="include\spinbuttoninterf.h" />
     <ClInclude Include="include\stackbattleactionmsg.h" />
