--- a/mss32/mss32.vcxproj
+++ b/mss32/mss32.vcxproj
@@ -256,6 +256,7 @@ call ..\buildDetours.bat ..\Detours
     <ClCompile Include="src\image2fill.cpp" />
     <ClCompile Include="src\image2outline.cpp" />
     <ClCompile Include="src\image2text.cpp" />
+    <ClCompile Include="src\imagelayerlist.cpp" />
     <ClCompile Include="src\imagepointlist.cpp" />
     <ClCompile Include="src\immunecat.cpp" />
     <ClCompile Include="src\interfmanager.cpp" />
@@ -593,6 +594,7 @@ call ..\buildDetours.bat ..\Detours
     <ClInclude Include="include\image2fill.h" />
     <ClInclude Include="include\image2outline.h" />
     <ClInclude Include="include\image2text.h" />
+    <ClInclude Include="include\imagelayerlist.h" />
     <ClInclude Include="include\imagepointlist.h" />
     <ClInclude Include="include\imgfactory.h" />
     <ClInclude Include="include\immunecat.h" />
