Add Currency lua binding

--- a/mss32/mss32.vcxproj.filters
+++ b/mss32/mss32.vcxproj.filters
@@ -937,6 +937,9 @@
     <ClCompile Include="src\itemutils.cpp">
       <Filter>utils</Filter>
     </ClCompile>
+    <ClCompile Include="src\bindings\currencyview.cpp">
+      <Filter>bindings</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="include\aipriority.h">
@@ -2368,6 +2371,9 @@
     </ClInclude>
     <ClInclude Include="include\itemutils.h">
       <Filter>utils</Filter>
+    </ClInclude>
+    <ClInclude Include="include\bindings\currencyview.h">
+      <Filter>bindings</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
