--- a/mss32/mss32.vcxproj
+++ b/mss32/mss32.vcxproj
@@ -182,6 +182,7 @@ call ..\buildDetours.bat ..\Detours
     <ClCompile Include="src\batunitanim.cpp" />
     <ClCompile Include="src\batviewer2dengine.cpp" />
     <ClCompile Include="src\bindings\attackview.cpp" />
+    <ClCompile Include="src\bindings\currencyview.cpp" />
     <ClCompile Include="src\bindings\dynupgradeview.cpp" />
     <ClCompile Include="src\bindings\groupview.cpp" />
     <ClCompile Include="src\bindings\idview.cpp" />
@@ -491,6 +492,7 @@ call ..\buildDetours.bat ..\Detours
     <ClInclude Include="include\batviewer2dengine.h" />
     <ClInclude Include="include\batviewerutils.h" />
     <ClInclude Include="include\bindings\attackview.h" />
+    <ClInclude Include="include\bindings\currencyview.h" />
     <ClInclude Include="include\bindings\dynupgradeview.h" />
     <ClInclude Include="include\bindings\groupview.h" />
     <ClInclude Include="include\bindings\idview.h" />
