Add ItemBase lua binding

--- a/mss32/mss32.vcxproj.filters
+++ b/mss32/mss32.vcxproj.filters
@@ -940,6 +940,9 @@
     <ClCompile Include="src\bindings\currencyview.cpp">
       <Filter>bindings</Filter>
     </ClCompile>
+    <ClCompile Include="src\bindings\itembaseview.cpp">
+      <Filter>bindings</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="include\aipriority.h">
@@ -2373,6 +2376,9 @@
       <Filter>utils</Filter>
     </ClInclude>
     <ClInclude Include="include\bindings\currencyview.h">
+      <Filter>bindings</Filter>
+    </ClInclude>
+    <ClInclude Include="include\bindings\itembaseview.h">
       <Filter>bindings</Filter>
     </ClInclude>
   </ItemGroup>
