Add Item lua binding

--- a/mss32/mss32.vcxproj
+++ b/mss32/mss32.vcxproj
@@ -187,6 +187,7 @@ call ..\buildDetours.bat ..\Detours
     <ClCompile Include="src\bindings\groupview.cpp" />
     <ClCompile Include="src\bindings\idview.cpp" />
     <ClCompile Include="src\bindings\itembaseview.cpp" />
+    <ClCompile Include="src\bindings\itemview.cpp" />
     <ClCompile Include="src\bindings\leaderview.cpp" />
     <ClCompile Include="src\bindings\locationview.cpp" />
     <ClCompile Include="src\bindings\point.cpp" />
@@ -498,6 +499,7 @@ call ..\buildDetours.bat ..\Detours
     <ClInclude Include="include\bindings\groupview.h" />
     <ClInclude Include="include\bindings\idview.h" />
     <ClInclude Include="include\bindings\itembaseview.h" />
+    <ClInclude Include="include\bindings\itemview.h" />
     <ClInclude Include="include\bindings\leaderview.h" />
     <ClInclude Include="include\bindings\locationview.h" />
     <ClInclude Include="include\bindings\point.h" />
