--- a/mss32/mss32.vcxproj.filters
+++ b/mss32/mss32.vcxproj.filters
@@ -946,6 +946,9 @@
     <ClCompile Include="src\bindings\itembaseview.cpp">
       <Filter>bindings</Filter>
     </ClCompile>
+    <ClCompile Include="src\batattacktransformother.cpp">
+      <Filter>game</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="include\aipriority.h">
@@ -2386,6 +2389,9 @@
     </ClInclude>
     <ClInclude Include="include\bindings\itembaseview.h">
       <Filter>bindings</Filter>
+    </ClInclude>
+    <ClInclude Include="include\batattacktransformother.h">
+      <Filter>game</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
